--- a/.editorconfig
+++ b/.editorconfig
@@ -6,9 +6,9 @@ charset = utf-8
 end_of_line = lf
 indent_size = 2
 indent_style = space
-insert_final_newline = true
+insert_final_newline = false
 max_line_length = 80
-trim_trailing_whitespace = true
+trim_trailing_whitespace = false
 
 [*.md]
 max_line_length = 0
